[package]
name = "edstem"
version = "0.1.0"
authors = ["Dante Dam <laggycomputer@yahoo.com>"]
edition = "2024"
description = "Async API wrapper to Ed Discussion"
repository = "https://github.com/laggycomputer/edstem"
license = "MIT"
keywords = ["ed-discussion", "api", "async", "wrapper"]
categories = ["api-bindings"]

[dependencies]
