[package]
name = "edstem"
version = "0.4.0"
authors = ["Dante Dam <laggycomputer@yahoo.com>"]
edition = "2024"
description = "Async API wrapper to Ed Discussion"
repository = "https://github.com/laggycomputer/edstem"
license = "MIT"
keywords = ["ed-discussion", "api", "async", "wrapper"]
categories = ["api-bindings"]

[dependencies]
derive-getters = "0.5.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum_macros = "0.27.1"
thiserror = "2.0.12"

[features]
default = []
serde = []
